--- a/serviceng2/Web.config
+++ b/serviceng2/Web.config
@@ -9,26 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-USoftEducation-20170425072816.mdf;Initial Catalog=aspnet-USoftEducation-20170425072816;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ussdbEntities" connectionString="Data Source=.;Initial Catalog=ussdbng;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />-->
-    
-     <!--  <add name="ussdbEntities" connectionString="Data Source=185.15.244.152;Initial Catalog=chaman1_testappdb;uid=usstestappdba;pwd=Cuy3j%63;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-   <add name="ussdbEntities" connectionString="Data Source=185.15.244.152;Initial Catalog=c1_ecaapp_maindb;uid=ecaappdba;pwd=mI$kh234;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
    
-    <add name="ussdbEntities" connectionString="Data Source=.;Initial Catalog=eappdbmain;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-   <add name="ussdbEntities" connectionString="Data Source=.;Initial Catalog=eappdbdemo;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="ussdbEntities" connectionString="Data Source=185.15.244.152;Initial Catalog=c_ea_demodb;uid=ecaappdba;pwd=mI$kh234;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
--->
-   <!--   <add name="ussdbEntities" connectionString="Data Source=.;Initial Catalog=ussdbng;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="ussdbEntities" connectionString="Data Source=185.15.244.152;Initial Catalog=c_ea_demodb;uid=ecaappdba;pwd=mI$kh234;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-   
-   <add name="ussdbEntities" connectionString="Data Source=185.15.244.152;Initial Catalog=chaman1_testappdb;uid=usstestappdba;pwd=Cuy3j%63;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-<add name="ussdbEntities" connectionString="Data Source=eacademics.in;Initial Catalog=c1_ecaapp_maindb;uid=ecaappdba;pwd=mI$kh234;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-
-
-    <add name="ussdbEntities" connectionString="Data Source=.;Initial Catalog=eappdbmain;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
--->
-<add name="ussdbEntities" connectionString="Data Source=eacademics.in;Initial Catalog=c1_ecaapp_maindb;uid=ecaappdba;pwd=mI$kh234;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+<add name="ussdbEntities" connectionString="Data Source=;Initial Catalog=;uid=;pwd=;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
 
   
   </connectionStrings>
@@ -37,8 +19,8 @@
       <add key="UssSchemaName" value="uss" />
       <add key="SchoolSchemaName" value="sch" />
     <add key="CurrentWebsite" value="http://localhost:51131" />
-      <add key="ParentPassword" value="PA@#$VPF1df$%P" />
-      <add key="OtherPassword" value="A@#$VF1df$%" />
+      <add key="ParentPassword" value="" />
+      <add key="OtherPassword" value="" />
     
   
   </appSettings>
